# HFTSimulator

./: Cargo.toml  Dockerfile  README.Docker.md  README.md  compose.yaml  dockerPush.bat  run_local.bat  visualizer.py
frontend/: Dockerfile  package-lock.json  package.json  server.js  visualizer.py
frontend/public/: index.html
src/: corporation.rs  exchange.rs  main.rs  market.rs  utils.rs
