[package]
name = "HFTSimulator"
version = "0.1.0"
edition = "2024"

[profile.dev]
debug = 2
opt-level = 0

[dependencies]
crossbeam = "0.8.4"
rand = "0.10.1"
rand_distr = "0.6.0"
windows = { version = "0.62.2", features = ["Win32", "Win32_System", "Win32_System_Diagnostics", "Win32_System_Diagnostics_Debug"] }
